# 3DS-Holographic-PC-Dashboard

./: .gitignore  readMe.md  readMe_ZH.md
.github/workflows/: release.yml
3ds/: Makefile  SETUP.md
3ds/romfs/gfx/: cat.t3x
3ds/source/: main.c  vshader.pica
server/: Cargo.toml  build.sh
server/src/: main.rs  monitor.rs
server/temp-sensor/: temp_sensor  temp_sensor.m
web/: index.html  main.js  style.css
